lesson4/css/small.css
h1 {
    font-size: 24px;
}

h2 {
    font-size: 12px;
}

body {
    margin: 0 auto;
    font-size: 16px;
    line-height: 1.5;
    font-family: 'Noto Sans', sans-serif;
}

header {
    background-color: orange;
    color: black;
    display: flex;
    align-items: center;
    justify-content: center;
}

.myicon {
    width: 70px;
    margin-right: 5px;
}

.sitename {
    text-align: left;
    margin: 0;
    padding: 0;
}

.sitemotto {
    text-align: left;
    margin: 0;
    padding: 0;
    font-style: italic;
}

nav {
    margin: 0 auto;
    background-color: #fcc765;
}

.navigation {
    list-style: none;
    padding: 0;
    margin: 0;
}

.navigation li:first-child {
    display: block;
}

.navigation li {
    display: none;
}

.navigation a {
    display: block;
    padding: 0.75rem;
    text-align: center;
    text-decoration: none;
    color: white;
}

.navigation a:hover {
    color: black;
    background-color: orange;
}

.responsive li {
    display: block;
}

.mycontent {
    max-width: 85%;
    min-height: 100px;
    text-align: left;
    margin: 0 auto;
}

.subcontent {
    height: 100px;
    margin: 15px;
    padding: 5px;
    background: repeating-linear-gradient(
                    45deg,
                    #e6e6e6,
                    #e6e6e6 10px,
                    #d3d3d3 10px,
                    #d4d4d4 20px);
    border: 2px dotted gray;
    border-radius: 5px 5px 5px 5px;
    color: grey;
    display: flex;
    align-items: center;
    justify-content: center;
}

footer {
    color: #000000;
}

.byu {
    color: blue;
}

.navback:hover, .byu:hover {
    color: lightblue;
}

footer, .byu {
    background-color: #fafad2;
    font-size: 12px;
}

header, nav, footer{
    margin: 0 auto;
    text-align: center;
}

header, footer {
    padding: 12px;
}

.navback {
    color: blue;
    font-size: 12px;
    display: block;
    text-align: left;
}

